week4/k8s-week5-project/manifests/assets-deployment.yaml
apiVersion: apps/v1 
kind: Deployment
metadata:
  name: assets

spec:
  replicas: 3
  selector:
    matchLabels:
      app: assets

  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 0
      maxSurge: 1

  template:
    metadata:
      labels:
        app: assets

    spec:
      
      containers:
      - name: assets
        image: nginx:alpine
        imagePullPolicy: Always

        ports:
        - containerPort: 80

        resources:
          requests:
            memory: "64Mi"
            cpu: "100m"
          limits:
            memory: "128Mi"
            cpu: "200m"

        livenessProbe:
          httpGet:
            path: "/"
            port: 80
          initialDelaySeconds: 10
          periodSeconds: 15

        readinessProbe:
          httpGet:
            path: "/"
            port: 80
          initialDelaySeconds: 5
          periodSeconds: 10
        
        volumeMounts:
            - name: html
              mountPath: /usr/share/nginx/html/k8s-assets

      volumes:
          - name: html
            emptyDir: {}
