week4/k8s-week5-project/manifests/backend-deployment.yaml
apiVersion: apps/v1 
kind: Deployment
metadata:
  name: backend
spec:
  replicas: 3
  selector:
    matchLabels:
      app: backend

  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 0
      maxSurge: 1

  template:
    metadata:
      labels:
        app: backend

    spec:
      containers:
      - name: backend
        image: aakash1hestabit/backend:v2
        imagePullPolicy: Always

        ports:
        - containerPort: 9000

        resources:
          requests:
            memory: "64Mi"
            cpu: "100m"
          limits:
            memory: "128Mi"
            cpu: "200m"

        livenessProbe:
          httpGet:
            path: "/api/health"
            port: 9000
          initialDelaySeconds: 10
          periodSeconds: 15

        readinessProbe:
          httpGet:
            path: "/api/ready"
            port: 9000
          initialDelaySeconds: 5
          periodSeconds: 10
