week4/k8s-week5-project/manifests/frontend-deployment.yaml
apiVersion: apps/v1 
kind: Deployment
metadata:
  name: frontend
spec:
  replicas: 3
  selector:
    matchLabels:
      app: frontend

  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 0
      maxSurge: 1

  template:
    metadata:
      labels:
        app: frontend

    spec:
      containers:
      - name: frontend
        image: aakash1hestabit/frontend:latest
        imagePullPolicy: Always

        ports:
        - containerPort: 80

        resources:
          requests:
            memory: "64Mi"
            cpu: "100m"
          limits:
            memory: "128Mi"
            cpu: "200m"

        livenessProbe:
          httpGet:
            path: "/"
            port: 3000
          initialDelaySeconds: 10
          periodSeconds: 15

        readinessProbe:
          httpGet:
            path: "/"
            port: 3000
          initialDelaySeconds: 5
          periodSeconds: 10
