week4/k8s-week5-project/manifests/assets-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: "assets-service"
spec:
  selector:
    app: assets
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
