week4/k8s-week5-project/manifests/backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: "backend-service"
spec:
  selector:
    app: backend
  ports:
    - protocol: TCP
      port: 80
      targetPort: 9000
