week4/k8s-week5-project/manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: project-ingress
spec:
  ingressClassName: nginx
  rules:
    - host: www.bootcamp.local
      http: 
        paths:
        - path: /
          pathType: Prefix
          backend:
            service: 
              name: frontend-service
              port:
                number: 3000
    - host: api.bootcamp.local
      http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service: 
              name: backend-service
              port:
                number: 80
    - host: assets.bootcamp.local
      http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service: 
              name: assets-service
              port:
                number: 80
